--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -189,6 +189,7 @@ h2 {
         text-align: center;
         width: 150px;
         margin: 20px;
+        filter: drop-shadow(3px 2px 2px gray);
     }
 }
 
@@ -203,6 +204,7 @@ h2 {
         text-align: center;
         width: 150px;
         margin: 20px;
+        filter: drop-shadow(3px 2px 2px gray);
     }
 }
 
@@ -217,6 +219,7 @@ h2 {
         text-align: center;
         width: 150px;
         margin: 20px;
+        filter: drop-shadow(3px 2px 2px gray);
     }
 }
 
