--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -31,6 +31,15 @@ header nav #logo {
   font-weight: bold;
   font-family: "Roboto", sans-serif;
 }
+header nav .toggle {
+  color: white;
+  background: none;
+  border: none;
+  font-size: 30px;
+  padding: 0 20px;
+  cursor: pointer;
+  display: none;
+}
 header nav ul {
   position: relative;
   display: flex;
@@ -47,7 +56,7 @@ header nav ul li a {
   color: white;
   font-family: "Roboto", sans-serif;
 }
-header nav .menu::before {
+header nav .pagina::before {
   content: "";
   height: 3px;
   width: 0%;
@@ -57,7 +66,7 @@ header nav .menu::before {
   bottom: -12px;
   transition: 0.4s ease-out;
 }
-header nav .menu:hover::before {
+header nav .pagina:hover::before {
   width: 100%;
 }
 header nav.bajar {
@@ -209,6 +218,292 @@ footer .redes:hover {
   width: 55px;
   margin: 10px;
   transition: 0.6s;
+}
+
+@media (max-width: 544px) {
+  header nav #logo {
+    font-size: 20px;
+    padding-top: 5px;
+  }
+  header nav .toggle {
+    display: block;
+  }
+  header nav .menu {
+    position: fixed;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    left: 100%;
+    top: 80px;
+    width: 100%;
+    transition: 0.3s;
+    overflow-y: auto;
+  }
+  header nav .menu li {
+    list-style: none;
+    margin: 20px;
+  }
+  header nav .menu_visible {
+    left: 0;
+  }
+  header .perfil #nombre {
+    font-size: 30px;
+  }
+  header .perfil #formacion {
+    font-size: 20px;
+  }
+  header .perfil video {
+    width: 100%;
+  }
+
+  #sobre-mi {
+    padding: 5%;
+    margin: 5%;
+    border-radius: 4px;
+    box-shadow: 0 0 12px #979696;
+    font-family: "Roboto", sans-serif;
+  }
+  #sobre-mi .caja1 {
+    display: block;
+    padding: 5%;
+    width: 90%;
+    align-items: center;
+    text-align: center;
+  }
+  #sobre-mi .caja1 h2 {
+    text-align: center;
+  }
+  #sobre-mi .caja2 {
+    display: block;
+    padding: 5%;
+  }
+  #sobre-mi .caja2 h2 {
+    text-align: center;
+  }
+
+  .educacion {
+    margin-top: 7%;
+    margin-bottom: 7%;
+    font-family: "Roboto", sans-serif;
+    display: inline-block;
+  }
+  .educacion .instituto {
+    padding: 5%;
+  }
+  .educacion .descripcion {
+    margin: 3%;
+    text-align: justify;
+  }
+  .educacion .descripcion .fechas {
+    color: #888787;
+  }
+  .educacion .descripcion p {
+    margin-top: 1%;
+  }
+
+  #Henry {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  #UBA {
+    margin-left: 23%;
+    margin-right: 23%;
+  }
+
+  #santaCatalina {
+    margin-left: 19%;
+    margin-right: 19%;
+  }
+
+  .fila1 {
+    display: inline-block;
+  }
+  .fila1 .skill-image {
+    width: 150px;
+    margin: 20px;
+    filter: none;
+  }
+
+  .fila2 {
+    display: inline-block;
+    margin-top: -40px;
+  }
+  .fila2 .skill-image {
+    width: 150px;
+    margin: 20px;
+    filter: none;
+  }
+
+  .fila3 {
+    display: inline-block;
+    margin-top: -40px;
+  }
+  .fila3 .skill-image {
+    filter: none;
+  }
+
+  .mover-derecha {
+    display: inline-block;
+    margin-left: 6%;
+  }
+}
+@media (max-width: 516px) {
+  .fila1 {
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+
+  .fila2 {
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+
+  .fila3 {
+    margin-right: 10%;
+    margin-left: 10%;
+  }
+
+  .mover-derecha {
+    margin-left: 2.5%;
+  }
+}
+@media (max-width: 505px) {
+  .skills .fila1 {
+    display: inline-block;
+    margin-left: 19%;
+  }
+  .skills .fila1 .skill-image {
+    width: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .skills .fila2 {
+    display: inline-block;
+    margin-left: 19%;
+  }
+  .skills .fila2 .skill-image {
+    width: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .skills .fila3 {
+    display: inline-block;
+    margin-left: 19%;
+  }
+  .skills .fila3 .skill-image {
+    width: 120px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .skills .mover-derecha {
+    display: inline-flex;
+  }
+}
+@media (max-width: 473px) {
+  .skills {
+    margin-right: 9%;
+  }
+}
+@media (max-width: 471px) {
+  .btn-cv {
+    display: none;
+  }
+}
+@media (max-width: 462px) {
+  .skills {
+    margin: 0;
+    margin-left: -19px;
+  }
+}
+@media (max-width: 428px) {
+  .skills {
+    margin: 0;
+    margin-left: -6%;
+  }
+}
+@media (max-width: 428px) {
+  .skills {
+    margin: 0%;
+  }
+}
+@media (max-width: 420px) {
+  .skills .fila1 {
+    margin-left: 13%;
+  }
+  .skills .fila2 {
+    margin-left: 13%;
+  }
+  .skills .fila3 {
+    margin-left: 13%;
+  }
+}
+@media (max-width: 388px) {
+  .skills .fila1 {
+    margin-left: 10%;
+  }
+  .skills .fila2 {
+    margin-left: 10%;
+  }
+  .skills .fila3 {
+    margin-left: 10%;
+  }
+}
+@media (max-width: 373px) {
+  .skills .fila1 {
+    margin-left: 9%;
+  }
+  .skills .fila2 {
+    margin-left: 9%;
+  }
+  .skills .fila3 {
+    margin-left: 9%;
+  }
+}
+@media (max-width: 369px) {
+  .skills .fila1 {
+    margin-left: 8%;
+  }
+  .skills .fila2 {
+    margin-left: 8%;
+  }
+  .skills .fila3 {
+    margin-left: 8%;
+  }
+}
+@media (max-width: 364px) {
+  .skills .fila1 {
+    margin-left: 7%;
+  }
+  .skills .fila2 {
+    margin-left: 7%;
+  }
+  .skills .fila3 {
+    margin-left: 7%;
+  }
+}
+@media (max-width: 360px) {
+  .skills .fila1 {
+    margin-left: 6%;
+  }
+  .skills .fila2 {
+    margin-left: 6%;
+  }
+  .skills .fila3 {
+    margin-left: 6%;
+  }
+}
+@media (max-width: 355px) {
+  .skills .fila1 {
+    margin-left: 5%;
+  }
+  .skills .fila2 {
+    margin-left: 5%;
+  }
+  .skills .fila3 {
+    margin-left: 5%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
